<resources>
    <string name="app_name">Studit</string>
    <string name="default_notification_channel_id">idid</string>
    <string name="default_notification_channel_name">namename</string>
    <string name="home">홈</string>
    <string name="study">스터디 관리</string>
    <string name="chat">채팅</string>
    <string name="profile">프로필</string>

    <string name="todo">TODO</string>

    <string name="STUDIT">STUDIT</string>
    <string name="StringValue">이미지가 열리지 않습니다.</string>

    <string name="studit_study">STUDIT STUDY</string>
    <string name="studit_chall">STUDIT CHALLENGE</string>
    <string name="studit_free">STUDIT FREE</string>

    <string name="search_study_hint">어떤 스터디를 들어갈까?</string>
    <string name="search_chall_hint">어떤 챌린지에 들어갈까?</string>
    <string name="search_free_hint">무엇을 검색할까?</string>

    <string name="gender">성별</string>
    <string name="women">여자</string>
    <string name="men">남자</string>
    <string name="all">모두</string>

    <string name="age">나이</string>
    <string name="high">고등학생</string>
    <string name="college">대학생</string>
    <string name="job_seeker">취업준비생</string>
    <string name="worker">직장인</string>
    <string name="adult">기타</string>

    <string name="seoul">서울특별시</string>
    <string name="busan">부산광역시</string>
    <string name="daegu">대구광역시</string>
    <string name="incheon">인천광역시</string>
    <string name="gwangju">광주광역시</string>
    <string name="daejeon">대전광역시</string>
    <string name="ulsan">울산광역시</string>
    <string name="sejong">세종특별자치시</string>
    <string name="gyeonggi">경기도</string>
    <string name="gangwon">강원도</string>
    <string name="chungbuk">충청북도</string>
    <string name="chungnam">충청남도</string>
    <string name="jeollabuk">전라북도</string>
    <string name="jeollanam">전라남도</string>
    <string name="gyeongbuk">경상북도</string>
    <string name="gyeongnam">경상남도</string>
    <string name="jeju">제주특별자치도</string>

    <string name="area">지역</string>
    <string name="job">직업</string>
    <string name="my_study_text1">스터디 게시판</string>
    <string name="my_study_text2">스터디 관리</string>
    <string name="my_study_text3">스터디 없애기</string>
    <string name="my_study_text4">스터디장 위임</string>
    <string name="my_study_add">스터디원 추가</string>
    <string name="add">등록</string>
    <string name="my_study_add_hint">추가할 팀원 닉네임 입력!</string>
    <string name="apply">적용</string>
    <string name="online">온라인</string>
    <string name="offline">오프라인</string>
    <string name="integration">모두</string>
    <string name="text_activity">방식</string>
</resources>