<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--icon 임시로 넣어둠-->

    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/study"
        android:enabled="true"
        android:icon="@drawable/ic_study_manage"
        android:title="@string/study" />

    <!--    <item-->
    <!--        android:id="@+id/chat"-->
    <!--        android:enabled="true"-->
    <!--        android:icon="@drawable/ic_chat"-->
    <!--        android:title="스터디 모음" />-->

    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />

</menu>