<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/my_study_ic_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:contentDescription="@string/todo"
            android:paddingVertical="5dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_back" />

        <TextView
            android:id="@+id/my_study_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:text=""
            android:layout_gravity="center"
            android:textColor="@color/bottom_bar"
            android:textSize="25sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginVertical="10dp"
        android:background="?android:attr/listDivider" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/my_study_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never" />

            <View
                android:id="@+id/divider6"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginVertical="10dp"
                android:background="?android:attr/listDivider" />

            <!--            <androidx.appcompat.widget.AppCompatButton-->
            <!--                android:id="@+id/my_study_btn_plus"-->
            <!--                android:layout_width="40dp"-->
            <!--                android:layout_height="40dp"-->
            <!--                android:layout_gravity="center"-->
            <!--                android:layout_margin="10dp"-->
            <!--                android:background="@drawable/ic_add" />-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/my_study_edit_add"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="6"
                    android:layout_gravity="center"
                    android:background="@drawable/search_edit_search"
                    android:hint="@string/my_study_add_hint"
                    android:inputType="text"
                    android:paddingHorizontal="20dp"
                    android:textColorHint="@color/bottom_bar"
                    app:layout_constrainedWidth="true" />

                <Button
                    android:id="@+id/my_study_btn_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:backgroundTint="@color/bottom_bar"
                    android:padding="10dp"
                    android:text="@string/add"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20sp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/my_study_edit_del"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="6"
                    android:layout_gravity="center"
                    android:background="@drawable/search_edit_search"
                    android:hint="삭제할 팀원 닉네임 입력!"
                    android:inputType="text"
                    android:paddingHorizontal="20dp"
                    android:textColorHint="@color/bottom_bar"
                    app:layout_constrainedWidth="true" />

                <Button
                    android:id="@+id/my_study_btn_del"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:backgroundTint="@color/bottom_bar"
                    android:padding="10dp"
                    android:text="삭제"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>